--- a/src/index.html
+++ b/src/index.html
@@ -413,7 +413,7 @@
                 <img src="./assets/images/common/Blog-1.jpg" alt="イソギンチャク">
               </div>
               <div class="blog-card__item-content">
-                <p class="blog-card__item-category">2023.11/17</p>
+                <time class="blog-card__item-category">2023.11/17</time>
                 <p class="blog-card__item-title">ライセンス取得</p>
                 <p class="blog-card__item-text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
                     ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</p>
@@ -426,7 +426,7 @@
                 <img src="./assets/images/common/Blog-2.jpg" alt="ウミガメ">
               </div>
               <div class="blog-card__item-content">
-                <p class="blog-card__item-category">2023.11/17</p>
+                <time class="blog-card__item-category">2023.11/17</time>
                 <p class="blog-card__item-title">ウミガメと泳ぐ</p>
                 <p class="blog-card__item-text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
                     ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</p>
@@ -439,7 +439,7 @@
                 <img src="./assets/images/common/blog-3.jpg" alt="カクレクマノミ">
               </div>
               <div class="blog-card__item-content">
-                <p class="blog-card__item-category">2023.11/17</p>
+                <time class="blog-card__item-category">2023.11/17</time>
                 <p class="blog-card__item-title">カクレクマノミ</p>
                 <p class="blog-card__item-text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
                     ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</p>
@@ -667,7 +667,7 @@
           <div class="footer__left">
             <div class="footer__pc">
               <div class="footer__link footer-link">
-                <a href="page-campaign.html" class="footer-link__main">
+                <a href="page-c.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">キャンペーン</p>
                 </a>
@@ -691,9 +691,9 @@
                   <p class="footer-link__text">ダイビング情報</p>
                 </a>
                 <div class="footer-link__details">
-                  <a href="#" class="footer-link__detail">ライセンス講習</a>
-                  <a href="#" class="footer-link__detail">体験ダイビング</a>
-                  <a href="#" class="footer-link__detail">ファンダイビング</a>
+                  <a href="page-information.html?tab=ライセンス講習" class="footer-link__detail">ライセンス講習</a>
+                  <a href="page-information.html?tab=体験ダイビング" class="footer-link__detail">体験ダイビング</a>
+                  <a href="page-information.html?tab=ファンダイビング" class="footer-link__detail">ファンダイビング</a>
                 </div>
               </div>
               <div class="footer__link footer-link">
