--- a/src/page-about.html
+++ b/src/page-about.html
@@ -226,27 +226,29 @@
 
     <!-- About us -->
     <div class="page-about-us layout-page-about-us">
-      <div class="page-about-us__inner inner">
-        <div class="about-us__contents about-us__contents--page">
-          <div class="about-us__img-wrap">
-            <div class="about-us__img-left">
-              <picture>
-                <img class="u-desktop" src="./assets/images/common/Aboutas-1.jpg" alt="屋根の上のシーサー">
-              </picture>
+      <div class="page-about-us__inner inner fish-image">
+        <div class="page-about-us__wrap about-us">
+          <div class="about-us__contents about-us__contents--page">
+            <div class="about-us__img-wrap">
+              <div class="about-us__img-left">
+                <picture>
+                  <img class="u-desktop" src="./assets/images/common/Aboutas-1.jpg" alt="屋根の上のシーサー">
+                </picture>
+              </div>
+              <div class="about-us__img-right about-us__img-right--page">
+                <picture>
+                  <source media="(max-width: 768px)" srcset="./assets/images/common/Aboutas-2-sp.jpg">
+                  <img src="./assets/images/common/Aboutas-2.jpg" alt="海の中で２匹の魚が泳いでいる様子">
+                </picture>
+              </div>
             </div>
-            <div class="about-us__img-right about-us__img-right--page">
-              <picture>
-                <source media="(max-width: 768px)" srcset="./assets/images/common/Aboutas-2-sp.jpg">
-                <img src="./assets/images/common/Aboutas-2.jpg" alt="海の中で２匹の魚が泳いでいる様子">
-              </picture>
-            </div>
-          </div>
-          <div class="about-us__text-body about-us__text-body--page">
-            <h2 class="about-us__sub-titles about-us__sub-titles--page">Dive&nbsp;into<br>the&nbsp;Ocean</h2>
-            <div class="about-us__wrap">
-            <p class="about-us__sub-texts about-us__sub-texts--page">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br class="u-mobile">
-              ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
-            </p>
+            <div class="about-us__text-body about-us__text-body--page">
+              <h2 class="about-us__sub-titles about-us__sub-titles--page">Dive&nbsp;into<br>the&nbsp;Ocean</h2>
+              <div class="about-us__wrap">
+              <p class="about-us__sub-texts about-us__sub-texts--page">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br class="u-mobile">
+                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
+              </p>
+              </div>
             </div>
           </div>
         </div>
@@ -332,7 +334,7 @@
           <div class="footer__left">
             <div class="footer__pc">
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-c.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">キャンペーン</p>
                 </a>
@@ -343,7 +345,7 @@
                 </div>
               </div>
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-about.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">私たちについて</p>
                 </a>
@@ -351,18 +353,18 @@
             </div>
             <div class="footer__pc">
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-information.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">ダイビング情報</p>
                 </a>
                 <div class="footer-link__details">
-                  <a href="#" class="footer-link__detail">ライセンス講習</a>
-                  <a href="#" class="footer-link__detail">体験ダイビング</a>
-                  <a href="#" class="footer-link__detail">ファンダイビング</a>
+                  <a href="page-information.html?tab=ライセンス講習" class="footer-link__detail">ライセンス講習</a>
+                  <a href="page-information.html?tab=体験ダイビング" class="footer-link__detail">体験ダイビング</a>
+                  <a href="page-information.html?tab=ファンダイビング" class="footer-link__detail">ファンダイビング</a>
                 </div>
               </div>
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-blog.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">ブログ</p>
                 </a>
@@ -372,13 +374,13 @@
           <div class="footer__right">
             <div class="footer__pc">
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-voice.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">お客様の声</p>
                 </a>
               </div>
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-price.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">料金一覧</p>
                 </a>
@@ -391,25 +393,31 @@
             </div>
             <div class="footer__pc">
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-faq.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">よくある質問</p>
                 </a>
               </div>
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-site-map.html" class="footer-link__main">
+                  <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
+                  <p class="footer-link__text">サイトマップ</p>
+                </a>
+              </div>
+              <div class="footer__link footer-link">
+                <a href="page-privacy-policy.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">プライバシー<br>ポリシー</p>
                 </a>
               </div>
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-terms-of-service.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">利用規約</p>
                 </a>
               </div>
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-contact.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">お問い合わせ</p>
                 </a>
