--- a/src/page-blog-detail.html
+++ b/src/page-blog-detail.html
@@ -55,7 +55,7 @@
           <div class="drawer-menu__list">
             <div class="drawer-menu__left">
               <div class="drawer-menu__link drawer-menu-link">
-                <a href="#" class="drawer-menu-link__main">
+                <a href="page-campaign.html" class="drawer-menu-link__main">
                   <div class="drawer-menu-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="drawer-menu-link__text">キャンペーン</p>
                 </a>
@@ -66,13 +66,13 @@
                 </div>
               </div>
               <div class="drawer-menu__link drawer-menu-link">
-                <a href="#" class="drawer-menu-link__main">
+                <a href="page-about.html" class="drawer-menu-link__main">
                   <div class="drawer-menu-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="drawer-menu-link__text">私たちについて</p>
                 </a>
               </div>
               <div class="drawer-menu__link drawer-menu-link">
-                <a href="#" class="drawer-menu-link__main">
+                <a href="page-information.html" class="drawer-menu-link__main">
                   <div class="drawer-menu-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="drawer-menu-link__text">ダイビング情報</p>
                 </a>
@@ -83,7 +83,7 @@
                 </div>
               </div>
               <div class="drawer-menu__link drawer-menu-link">
-                <a href="#" class="drawer-menu-link__main">
+                <a href="page-blog.html" class="drawer-menu-link__main">
                   <div class="drawer-menu-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="drawer-menu-link__text">ブログ</p>
                 </a>
@@ -91,13 +91,13 @@
             </div>
             <div class="drawer-menu__right">
               <div class="drawer-menu__link drawer-menu-link">
-                <a href="#" class="drawer-menu-link__main-right">
+                <a href="page-voice.html" class="drawer-menu-link__main-right">
                   <div class="drawer-menu-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="drawer-menu-link__text">お客様の声</p>
                 </a>
               </div>
               <div class="drawer-menu__link drawer-menu-link">
-                <a href="#" class="drawer-menu-link__main-right">
+                <a href="page-price.html" class="drawer-menu-link__main-right">
                   <div class="drawer-menu-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="drawer-menu-link__text">料金一覧</p>
                 </a>
@@ -108,25 +108,31 @@
                 </div>
               </div>
               <div class="drawer-menu__link drawer-menu-link">
-                <a href="#" class="drawer-menu-link__main-right">
+                <a href="page-faq.html" class="drawer-menu-link__main-right">
                   <div class="drawer-menu-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="drawer-menu-link__text">よくある質問</p>
                 </a>
               </div>
               <div class="drawer-menu__link drawer-menu-link">
-                <a href="#" class="drawer-menu-link__main-right">
+                <a href="page-site-map.html" class="drawer-menu-link__main-right">
+                  <div class="drawer-menu-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
+                  <p class="drawer-menu-link__text">サイトマップ</p>
+                </a>
+              </div>
+              <div class="drawer-menu__link drawer-menu-link">
+                <a href="page-privacy-policy.html" class="drawer-menu-link__main-right">
                   <div class="drawer-menu-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="drawer-menu-link__text">プライバシー<br>ポリシー</p>
                 </a>
               </div>
               <div class="drawer-menu__link drawer-menu-link">
-                <a href="#" class="drawer-menu-link__main-right">
+                <a href="page-terms-of-service.html" class="drawer-menu-link__main-right">
                   <div class="drawer-menu-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="drawer-menu-link__text">利用規約</p>
                 </a>
               </div>
               <div class="drawer-menu__link drawer-menu-link">
-                <a href="#" class="drawer-menu-link__main-right">
+                <a href="page-contact.html" class="drawer-menu-link__main-right">
                   <div class="drawer-menu-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="drawer-menu-link__text">お問い合わせ</p>
                 </a>
@@ -139,49 +145,49 @@
       <div class="header__pc-nav pc-nav">
         <ul class="pc-nav__items">
           <li class="pc-nav__item">
-            <a href="#campaign">
+            <a href="page-campaign.html">
               <p class="pc-nav__main">Campaign</p>
               <p class="pc-nav__sub">キャンペーン</p>
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#about">
+            <a href="page-about.html">
               <p class="pc-nav__main">About&nbsp;us</p>
               <p class="pc-nav__sub">私たちについて</p>
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#information">
+            <a href="page-information.html">
               <p class="pc-nav__main">Information</p>
               <p class="pc-nav__sub">ダイビング情報</p>
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#blog">
+            <a href="page-blog.html">
               <p class="pc-nav__main">Blog</p>
               <p class="pc-nav__sub">ブログ</p>
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#voice">
+            <a href="page-voice.html">
               <p class="pc-nav__main">Voice</p>
               <p class="pc-nav__sub">お客様の声</p>
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#price">
+            <a href="page-price.html">
               <p class="pc-nav__main">Price</p>
               <p class="pc-nav__sub">料金一覧</p>
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#faq">
+            <a href="page-faq.html">
               <p class="pc-nav__main">FAQ</p>
               <p class="pc-nav__sub">よくある質問</p>
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#contact-top">
+            <a href="page-contact.html">
               <p class="pc-nav__main">Contact</p>
               <p class="pc-nav__sub">お問合せ</p>
             </a>
@@ -222,39 +228,30 @@
 
 
     <!-- blog-detail -->
-    <div class="page-blog-detail layout-page-blog-detail">
-      <div class="page-blog-detail__inner inner">
-        <div class="page-blog-detail__wraps">
-          <div class="page-blog-detail__container">
-            <p class="page-blog-detail__category">2023.11/17</p>
-            <p class="page-blog-detail__title">ライセンス取得</p>
+    <div class="page-blog layout-page-blog">
+      <div class="page-blog__inner inner fish-image">
+        <div class="page-blog__wraps">
+          <div class="page-blog-container--detail">
+            <time class="page-blog__category">2023.11/17</time>
+            <h1 class="page-blog-detail__title">ライセンス取得</h1>
               <div class="page-blog-detail__img">
               <img src="./assets/images/common/Blog-1.jpg" alt="イソギンチャク">
               </div>
-              <p class="page-blog-detail__text">
+              <p>
                 ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
               </p>
               <div class="page-blog-detail__img">
                 <img src="./assets/images/common/Blog-1.jpg" alt="イソギンチャク">
               </div>
-              <p class="page-blog-detail__text">
+              <p>
                 ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
               </p>
-              <div class="page-blog-detail__list--wrap">
-                <div class="page-blog-detail__list">
-                  <img src="./assets/images/common/hitode2.svg" alt="ヒトデのアイコン">
-                    リスト１
-                </div>
-                <div class="page-blog-detail__list">
-                  <img src="./assets/images/common/hitode2.svg" alt="ヒトデのアイコン">
-                    リスト2
-                </div>
-                <div class="page-blog-detail__list">
-                  <img src="./assets/images/common/hitode2.svg" alt="ヒトデのアイコン">
-                    リスト3
-                </div>
-              </div>
-              <p class="page-blog-detail__texts">
+              <ul>
+                <li>リスト1</li>
+                <li>リスト2</li>
+                <li>リスト3</li>
+              </ul>
+              <p>
                 ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
               </p>
             <!-- ページネーション -->
@@ -281,7 +278,7 @@
                 <div class="page-blog__label"></div>
                 <div class="page-blog__title">
                   <img src="./assets/images/common/Blog-p-icon.svg" alt="クジラのアイコン">
-                  <p>人気記事</p>
+                  <h2>人気記事</h2>
                 </div>
               </div>
               <div class="page-blog__heading">
@@ -289,7 +286,7 @@
                   <div class="page-blog__list">
                     <img src="./assets/images/common/blog-p-card1.jpg" alt="黄色い魚が泳いでいる様子">
                     <div class="page-blog__items">
-                      <p class="page-blog__item-category">2023.11/17</p>
+                      <time class="page-blog__item-category">2023.11/17</time>
                       <p class="page-blog__item-title">ライセンス取得</p>
                     </div>
                   </div>
@@ -300,7 +297,7 @@
                   <div class="page-blog__list">
                     <img src="./assets/images/common/Blog-2.jpg" alt="亀が海を泳いでいる様子">
                     <div class="page-blog__items">
-                      <p class="page-blog__item-category">2023.11/17</p>
+                      <time class="page-blog__item-category">2023.11/17</time>
                       <p class="page-blog__item-title">ウミガメと泳ぐ</p>
                     </div>
                   </div>
@@ -311,7 +308,7 @@
                   <div class="page-blog__list">
                     <img src="./assets/images/common/blog-3.jpg" alt="イソギンチャクが泳いでいる様子">
                     <div class="page-blog__items">
-                      <p class="page-blog__item-category">2023.11/17</p>
+                      <time class="page-blog__item-category">2023.11/17</time>
                       <p class="page-blog__item-title">カクレクマノミ</p>
                     </div>
                   </div>
@@ -324,7 +321,7 @@
                 <div class="page-blog__label"></div>
                 <div class="page-blog__title">
                   <img src="./assets/images/common/Blog-p-icon.svg" alt="クジラのアイコン">
-                  <p>口コミ</p>
+                  <h2>口コミ</h2>
                 </div>
               </div>
               <div class="page-blog__reviews">
@@ -345,11 +342,11 @@
                 <div class="page-blog__label"></div>
                 <div class="page-blog__title">
                   <img src="./assets/images/common/Blog-p-icon.svg" alt="クジラのアイコン">
-                  <p>キャンペーン</p>
+                  <h2>キャンペーン</h2>
                 </div>
               </div>
             <!-- キャンペーン -->
-            <ul class="page-blog__campaign-cards campaign-cards">
+            <ul class="page-blog__campaign-cards campaign">
               <li class="campaign__card page-blog--card">
                 <a href="#">
                   <div class="campaign__card-img campaign__card-img--page">
@@ -399,7 +396,7 @@
                 <div class="page-blog__label"></div>
                 <div class="page-blog__title">
                   <img src="./assets/images/common/Blog-p-icon.svg" alt="クジラのアイコン">
-                  <p>アーカイブ</p>
+                  <h2>アーカイブ</h2>
                 </div>
               </div>
               <div class="page-blog__archive">
@@ -427,8 +424,7 @@
             </div>
           </div>
         </div>
-        </div>
-
+      </div>
     </div>
 
 
@@ -483,7 +479,7 @@
           <div class="footer__left">
             <div class="footer__pc">
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-c.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">キャンペーン</p>
                 </a>
@@ -494,7 +490,7 @@
                 </div>
               </div>
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-about.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">私たちについて</p>
                 </a>
@@ -502,18 +498,18 @@
             </div>
             <div class="footer__pc">
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-information.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">ダイビング情報</p>
                 </a>
                 <div class="footer-link__details">
-                  <a href="#" class="footer-link__detail">ライセンス講習</a>
-                  <a href="#" class="footer-link__detail">体験ダイビング</a>
-                  <a href="#" class="footer-link__detail">ファンダイビング</a>
+                  <a href="page-information.html?tab=ライセンス講習" class="footer-link__detail">ライセンス講習</a>
+                  <a href="page-information.html?tab=体験ダイビング" class="footer-link__detail">体験ダイビング</a>
+                  <a href="page-information.html?tab=ファンダイビング" class="footer-link__detail">ファンダイビング</a>
                 </div>
               </div>
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-blog.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">ブログ</p>
                 </a>
@@ -523,13 +519,13 @@
           <div class="footer__right">
             <div class="footer__pc">
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-voice.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">お客様の声</p>
                 </a>
               </div>
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-price.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">料金一覧</p>
                 </a>
@@ -542,25 +538,31 @@
             </div>
             <div class="footer__pc">
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-faq.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">よくある質問</p>
                 </a>
               </div>
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-site-map.html" class="footer-link__main">
+                  <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
+                  <p class="footer-link__text">サイトマップ</p>
+                </a>
+              </div>
+              <div class="footer__link footer-link">
+                <a href="page-privacy-policy.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">プライバシー<br>ポリシー</p>
                 </a>
               </div>
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-terms-of-service.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">利用規約</p>
                 </a>
               </div>
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-contact.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">お問い合わせ</p>
                 </a>
