--- a/src/page-blog.html
+++ b/src/page-blog.html
@@ -49,6 +49,7 @@
         <span></span>
         <span></span>
       </button>
+      <!-- SPドロワー -->
       <div class="header__drawer-menu drawer-menu js-drawer">
         <div class="drawer-menu__wrap">
           <div class="drawer-menu__list">
@@ -226,134 +227,134 @@
 
     <!-- blog -->
     <div class="page-blog layout-page-blog">
-      <div class="page-blog__inner inner">
+      <div class="page-blog__inner inner fish-image">
         <div class="page-blog__wraps">
           <div class="page-blog__container page-blog__container--blog">
             <ul class="page-blog__cards blog-cards">
-              <li class="blog-cards__card blog-card">
-                <a href="page-blog-detail.html">
+              <li class="blog-cards__card">
+                <a href="page-blog-detail.html" class="blog-card">
                   <div class="blog-card__item-img">
                     <img src="./assets/images/common/Blog-1.jpg" alt="イソギンチャク">
                   </div>
                   <div class="blog-card__item-content">
-                    <p class="blog-card__item-category">2023.11/17</p>
+                    <time class="blog-card__item-category">2023.11/17</time>
                     <p class="blog-card__item-title">ライセンス取得</p>
                     <p class="blog-card__item-text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
                         ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</p>
                   </div>
                 </a>
               </li>
-              <li class="blog-cards__card blog-card">
-                <a href="page-blog-detail.html">
+              <li class="blog-cards__card">
+                <a href="page-blog-detail.html" class="blog-card">
                   <div class="blog-card__item-img">
                     <img src="./assets/images/common/Blog-2.jpg" alt="ウミガメ">
                   </div>
                   <div class="blog-card__item-content">
-                    <p class="blog-card__item-category">2023.11/17</p>
+                    <time class="blog-card__item-category">2023.11/17</time>
                     <p class="blog-card__item-title">ウミガメと泳ぐ</p>
                     <p class="blog-card__item-text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
                         ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</p>
                   </div>
                 </a>
               </li>
-              <li class="blog-cards__card blog-card">
-                <a href="page-blog-detail.html">
+              <li class="blog-cards__card">
+                <a href="page-blog-detail.html" class="blog-card">
                   <div class="blog-card__item-img">
                     <img src="./assets/images/common/blog-3.jpg" alt="カクレクマノミ">
                   </div>
                   <div class="blog-card__item-content">
-                    <p class="blog-card__item-category">2023.11/17</p>
+                    <time class="blog-card__item-category">2023.11/17</time>
                     <p class="blog-card__item-title">カクレクマノミ</p>
                     <p class="blog-card__item-text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
                         ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</p>
                   </div>
                 </a>
               </li>
-              <li class="blog-cards__card blog-card">
-                <a href="page-blog-detail.html">
+              <li class="blog-cards__card">
+                <a href="page-blog-detail.html" class="blog-card">
                   <div class="blog-card__item-img">
                     <img src="./assets/images/common/blog-p-card1.jpg" alt="黄色い魚がいよいでいる様子">
                   </div>
                   <div class="blog-card__item-content">
-                    <p class="blog-card__item-category">2023.11/17</p>
+                    <time class="blog-card__item-category">2023.11/17</time>
                     <p class="blog-card__item-title">ライセンス取得</p>
                     <p class="blog-card__item-text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
                         ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</p>
                   </div>
                 </a>
               </li>
-              <li class="blog-cards__card blog-card">
-                <a href="page-blog-detail.html">
+              <li class="blog-cards__card">
+                <a href="page-blog-detail.html" class="blog-card">
                   <div class="blog-card__item-img">
                     <img src="./assets/images/common/blog-p-card2.jpg" alt="白いサンゴの写真">
                   </div>
                   <div class="blog-card__item-content">
-                    <p class="blog-card__item-category">2023.11/17</p>
+                    <time class="blog-card__item-category">2023.11/17</time>
                     <p class="blog-card__item-title">ウミガメと泳ぐ</p>
                     <p class="blog-card__item-text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
                         ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</p>
                   </div>
                 </a>
               </li>
-              <li class="blog-cards__card blog-card">
-                <a href="page-blog-detail.html">
+              <li class="blog-cards__card">
+                <a href="page-blog-detail.html" class="blog-card">
                   <div class="blog-card__item-img">
                     <img src="./assets/images/common/campaign3.jpg" alt="沢山のクラゲが泳いでいる様子">
                   </div>
                   <div class="blog-card__item-content">
-                    <p class="blog-card__item-category">2023.11/17</p>
+                    <time class="blog-card__item-category">2023.11/17</time>
                     <p class="blog-card__item-title">カクレクマノミ</p>
                     <p class="blog-card__item-text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
                         ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</p>
                   </div>
                 </a>
               </li>
-              <li class="blog-cards__card blog-card">
-                <a href="page-blog-detail.html">
+              <li class="blog-cards__card">
+                <a href="page-blog-detail.html" class="blog-card">
                   <div class="blog-card__item-img">
                     <img src="./assets/images/common/Blog-1.jpg" alt="イソギンチャク">
                   </div>
                   <div class="blog-card__item-content">
-                    <p class="blog-card__item-category">2023.11/17</p>
+                    <time class="blog-card__item-category">2023.11/17</time>
                     <p class="blog-card__item-title">ライセンス取得</p>
                     <p class="blog-card__item-text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
                         ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</p>
                   </div>
                 </a>
               </li>
-              <li class="blog-cards__card blog-card">
-                <a href="page-blog-detail.html">
+              <li class="blog-cards__card">
+                <a href="page-blog-detail.html" class="blog-card">
                   <div class="blog-card__item-img">
                     <img src="./assets/images/common/blog-p-card1.jpg" alt="黄色い魚がいよいでいる様子">
                   </div>
                   <div class="blog-card__item-content">
-                    <p class="blog-card__item-category">2023.11/17</p>
+                    <time class="blog-card__item-category">2023.11/17</time>
                     <p class="blog-card__item-title">ライセンス取得</p>
                     <p class="blog-card__item-text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
                         ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</p>
                   </div>
                 </a>
               </li>
-              <li class="blog-cards__card blog-card">
-                <a href="page-blog-detail.html">
+              <li class="blog-cards__card">
+                <a href="page-blog-detail.html" class="blog-card">
                   <div class="blog-card__item-img">
                     <img src="./assets/images/common/blog-p-card2.jpg" alt="白いサンゴの写真">
                   </div>
                   <div class="blog-card__item-content">
-                    <p class="blog-card__item-category">2023.11/17</p>
+                    <time class="blog-card__item-category">2023.11/17</time>
                     <p class="blog-card__item-title">ウミガメと泳ぐ</p>
                     <p class="blog-card__item-text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
                         ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</p>
                   </div>
                 </a>
               </li>
-              <li class="blog-cards__card blog-card">
-                <a href="page-blog-detail.html">
+              <li class="blog-cards__card">
+                <a href="page-blog-detail.html" class="blog-card">
                   <div class="blog-card__item-img">
                     <img src="./assets/images/common/campaign3.jpg" alt="沢山のクラゲが泳いでいる様子">
                   </div>
                   <div class="blog-card__item-content">
-                    <p class="blog-card__item-category">2023.11/17</p>
+                    <time class="blog-card__item-category">2023.11/17</time>
                     <p class="blog-card__item-title">カクレクマノミ</p>
                     <p class="blog-card__item-text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
                         ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</p>
@@ -403,7 +404,7 @@
                 <div class="page-blog__label"></div>
                 <div class="page-blog__title">
                   <img src="./assets/images/common/Blog-p-icon.svg" alt="クジラのアイコン">
-                  <p>人気記事</p>
+                  <h2>人気記事</h2>
                 </div>
               </div>
               <div class="page-blog__heading">
@@ -411,7 +412,7 @@
                   <div class="page-blog__list">
                     <img src="./assets/images/common/blog-p-card1.jpg" alt="黄色い魚が泳いでいる様子">
                     <div class="page-blog__items">
-                      <p class="page-blog__item-category">2023.11/17</p>
+                      <time class="page-blog__item-category">2023.11/17</time>
                       <p class="page-blog__item-title">ライセンス取得</p>
                     </div>
                   </div>
@@ -422,7 +423,7 @@
                   <div class="page-blog__list">
                     <img src="./assets/images/common/Blog-2.jpg" alt="黄色い魚が泳いでいる様子">
                     <div class="page-blog__items">
-                      <p class="page-blog__item-category">2023.11/17</p>
+                      <time class="page-blog__item-category">2023.11/17</time>
                       <p class="page-blog__item-title">ウミガメと泳ぐ</p>
                     </div>
                   </div>
@@ -433,7 +434,7 @@
                   <div class="page-blog__list">
                     <img src="./assets/images/common/blog-3.jpg" alt="黄色い魚が泳いでいる様子">
                     <div class="page-blog__items">
-                      <p class="page-blog__item-category">2023.11/17</p>
+                      <time class="page-blog__item-category">2023.11/17</time>
                       <p class="page-blog__item-title">カクレクマノミ</p>
                     </div>
                   </div>
@@ -446,7 +447,7 @@
                 <div class="page-blog__label"></div>
                 <div class="page-blog__title">
                   <img src="./assets/images/common/Blog-p-icon.svg" alt="クジラのアイコン">
-                  <p>口コミ</p>
+                  <h2>口コミ</h2>
                 </div>
               </div>
               <div class="page-blog__reviews">
@@ -467,11 +468,11 @@
                 <div class="page-blog__label"></div>
                 <div class="page-blog__title">
                   <img src="./assets/images/common/Blog-p-icon.svg" alt="クジラのアイコン">
-                  <p>キャンペーン</p>
+                  <h2>キャンペーン</h2>
                 </div>
               </div>
             <!-- キャンペーン -->
-              <ul class="page-blog__campaign-cards campaign-cards">
+              <ul class="page-blog__campaign-cards campaign">
                 <li class="campaign__card page-blog--card">
                   <a href="#">
                     <div class="campaign__card-img campaign__card-img--page">
@@ -521,7 +522,7 @@
                 <div class="page-blog__label"></div>
                 <div class="page-blog__title">
                   <img src="./assets/images/common/Blog-p-icon.svg" alt="クジラのアイコン">
-                  <p>アーカイブ</p>
+                  <h2>アーカイブ</h2>
                 </div>
               </div>
               <div class="page-blog__archive">
@@ -605,7 +606,7 @@
           <div class="footer__left">
             <div class="footer__pc">
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-c.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">キャンペーン</p>
                 </a>
@@ -616,7 +617,7 @@
                 </div>
               </div>
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-about.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">私たちについて</p>
                 </a>
@@ -624,18 +625,18 @@
             </div>
             <div class="footer__pc">
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-information.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">ダイビング情報</p>
                 </a>
                 <div class="footer-link__details">
-                  <a href="#" class="footer-link__detail">ライセンス講習</a>
-                  <a href="#" class="footer-link__detail">体験ダイビング</a>
-                  <a href="#" class="footer-link__detail">ファンダイビング</a>
+                  <a href="page-information.html?tab=ライセンス講習" class="footer-link__detail">ライセンス講習</a>
+                  <a href="page-information.html?tab=体験ダイビング" class="footer-link__detail">体験ダイビング</a>
+                  <a href="page-information.html?tab=ファンダイビング" class="footer-link__detail">ファンダイビング</a>
                 </div>
               </div>
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-blog.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">ブログ</p>
                 </a>
@@ -645,13 +646,13 @@
           <div class="footer__right">
             <div class="footer__pc">
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-voice.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">お客様の声</p>
                 </a>
               </div>
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-price.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">料金一覧</p>
                 </a>
@@ -664,25 +665,31 @@
             </div>
             <div class="footer__pc">
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-faq.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">よくある質問</p>
                 </a>
               </div>
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-site-map.html" class="footer-link__main">
+                  <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
+                  <p class="footer-link__text">サイトマップ</p>
+                </a>
+              </div>
+              <div class="footer__link footer-link">
+                <a href="page-privacy-policy.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">プライバシー<br>ポリシー</p>
                 </a>
               </div>
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-terms-of-service.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">利用規約</p>
                 </a>
               </div>
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-contact.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">お問い合わせ</p>
                 </a>
