--- a/src/page-faq.html
+++ b/src/page-faq.html
@@ -225,10 +225,9 @@
 
     <!-- faq -->
     <div class="page-faq layout-page-faq">
-      <div class="page-faq__inner inner">
-				<div class="page-faq__accordion accordion js-accordion">
-          <div class="accordion__container">
-            <div class="accordion__item js-accordion__item">
+      <div class="page-faq__inner inner fish-image">
+				<div class="page-faq__accordion accordion-list js-accordion">
+            <div class="accordion-list__item js-accordion__item accordion">
               <h3 class="accordion__title js-accordion__title">
                 ここに質問が入ります。
               </h3>
@@ -238,7 +237,7 @@
                 </p>
               </div>
             </div>
-            <div class="accordion__item js-accordion__item">
+            <div class="accordion-list__item js-accordion__item accordion">
               <h3 class="accordion__title js-accordion__title">
                 ここに質問が入ります。
               </h3>
@@ -248,7 +247,7 @@
                 </p>
               </div>
             </div>
-            <div class="accordion__item js-accordion__item">
+            <div class="accordion-list__item js-accordion__item accordion">
               <h3 class="accordion__title js-accordion__title">
                 ここに質問が入ります。
               </h3>
@@ -258,7 +257,7 @@
                 </p>
               </div>
             </div>
-            <div class="accordion__item js-accordion__item">
+            <div class="accordion-list__item js-accordion__item accordion">
               <h3 class="accordion__title js-accordion__title">
                 ここに質問が入ります。
               </h3>
@@ -268,7 +267,7 @@
                 </p>
               </div>
             </div>
-            <div class="accordion__item js-accordion__item">
+            <div class="accordion-list__item js-accordion__item accordion">
               <h3 class="accordion__title js-accordion__title">
                 ここに質問が入ります。
               </h3>
@@ -278,7 +277,7 @@
                 </p>
               </div>
             </div>
-            <div class="accordion__item js-accordion__item">
+            <div class="accordion-list__item js-accordion__item accordion">
               <h3 class="accordion__title js-accordion__title">
                 ここに質問が入ります。
               </h3>
@@ -288,7 +287,7 @@
                 </p>
               </div>
             </div>
-            <div class="accordion__item js-accordion__item">
+            <div class="accordion-list__item js-accordion__item accordion">
               <h3 class="accordion__title js-accordion__title">
                 ここに質問が入ります。
               </h3>
@@ -298,7 +297,7 @@
                 </p>
               </div>
             </div>
-          </div>
+
         </div>
       </div>
     </div>
@@ -355,7 +354,7 @@
           <div class="footer__left">
             <div class="footer__pc">
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-c.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">キャンペーン</p>
                 </a>
@@ -366,7 +365,7 @@
                 </div>
               </div>
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-about.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">私たちについて</p>
                 </a>
@@ -374,18 +373,18 @@
             </div>
             <div class="footer__pc">
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-information.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">ダイビング情報</p>
                 </a>
                 <div class="footer-link__details">
-                  <a href="#" class="footer-link__detail">ライセンス講習</a>
-                  <a href="#" class="footer-link__detail">体験ダイビング</a>
-                  <a href="#" class="footer-link__detail">ファンダイビング</a>
+                  <a href="page-information.html?tab=ライセンス講習" class="footer-link__detail">ライセンス講習</a>
+                  <a href="page-information.html?tab=体験ダイビング" class="footer-link__detail">体験ダイビング</a>
+                  <a href="page-information.html?tab=ファンダイビング" class="footer-link__detail">ファンダイビング</a>
                 </div>
               </div>
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-blog.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">ブログ</p>
                 </a>
@@ -395,13 +394,13 @@
           <div class="footer__right">
             <div class="footer__pc">
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-voice.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">お客様の声</p>
                 </a>
               </div>
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-price.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">料金一覧</p>
                 </a>
@@ -414,25 +413,31 @@
             </div>
             <div class="footer__pc">
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-faq.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">よくある質問</p>
                 </a>
               </div>
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-site-map.html" class="footer-link__main">
+                  <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
+                  <p class="footer-link__text">サイトマップ</p>
+                </a>
+              </div>
+              <div class="footer__link footer-link">
+                <a href="page-privacy-policy.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">プライバシー<br>ポリシー</p>
                 </a>
               </div>
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-terms-of-service.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">利用規約</p>
                 </a>
               </div>
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-contact.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">お問い合わせ</p>
                 </a>
