--- a/src/page-price.html
+++ b/src/page-price.html
@@ -226,91 +226,93 @@
 
     <!-- price -->
     <div class="page-price layout-page-price">
-      <div class="page-price__inner inner">
-          <div class="page-price__item">
-            <div class="page-price__heading">
+      <div class="page-price__inner inner fish-image">
+        <div class="page-price__container price-tables">
+          <div class="page-price__item price-table">
+            <div class="price-table__heading">
               <img src="./assets/images/common/Price.svg" alt="ヒトデのアイコン">ライセンス講習
             </div>
-            <table class="page-price__table">
-              <tr class="page-price__list">
-                <td class="page-price__text">オープンウォーター<br class="u-mobile">ダイバーコース</td>
-                <td class="page-price__price-menu">¥50,000</td>
+            <table class="price-table__table">
+              <tr class="price-table__list">
+                <td class="price-table__text">オープンウォーター<br class="u-mobile">ダイバーコース</td>
+                <td class="price-table__price-menu">¥50,000</td>
               </tr>
-              <tr class="page-price__list">
-                <td class="page-price__text">アドバンスド<br class="u-mobile">オープンウォーターコース</td>
-                <td class="page-price__price-menu">¥60,000</td>
+              <tr class="price-table__list">
+                <td class="price-table__text">アドバンスド<br class="u-mobile">オープンウォーターコース</td>
+                <td class="price-table__price-menu">¥60,000</td>
               </tr>
-              <tr class="page-price__list">
-                <td class="page-price__text">レスキュー＋EFRコース</td>
-                <td class="page-price__price-menu">¥70,000</td>
+              <tr class="price-table__list">
+                <td class="price-table__text">レスキュー＋EFRコース</td>
+                <td class="price-table__price-menu">¥70,000</td>
               </tr>
             </table>
           </div>
-          <div class="page-price__item">
-            <div class="page-price__heading">
+          <div class="page-price__item price-table">
+            <div class="price-table__heading">
               <img src="./assets/images/common/Price.svg" alt="ヒトデのアイコン">体験ダイビング
             </div>
-            <table class="page-price__table">
-              <tr class="page-price__list">
-                <td class="page-price__text">ビーチ体験ダイビング<br class="u-mobile">(半日)</td>
-                <td class="page-price__price-menu">¥7,000</td>
+            <table class="price-table__table">
+              <tr class="price-table__list">
+                <td class="price-table__text">ビーチ体験ダイビング<br class="u-mobile">(半日)</td>
+                <td class="price-table__price-menu">¥7,000</td>
               </tr>
-              <tr class="page-price__list">
-                <td class="page-price__text">ビーチ体験ダイビング<br class="u-mobile">(1日)</td>
-                <td class="page-price__price-menu">¥14,000</td>
+              <tr class="price-table__list">
+                <td class="price-table__text">ビーチ体験ダイビング<br class="u-mobile">(1日)</td>
+                <td class="price-table__price-menu">¥14,000</td>
               </tr>
-              <tr class="page-price__list">
-                <td class="page-price__text">ボート体験ダイビング<br class="u-mobile">(半日)</td>
-                <td class="page-price__price-menu">¥10,000</td>
+              <tr class="price-table__list">
+                <td class="price-table__text">ボート体験ダイビング<br class="u-mobile">(半日)</td>
+                <td class="price-table__price-menu">¥10,000</td>
               </tr>
-              <tr class="page-price__list">
-                <td class="page-price__text">ボート体験ダイビング<br class="u-mobile">(1日)</td>
-                <td class="page-price__price-menu">¥18,000</td>
+              <tr class="price-table__list">
+                <td class="price-table__text">ボート体験ダイビング<br class="u-mobile">(1日)</td>
+                <td class="price-table__price-menu">¥18,000</td>
               </tr>
             </table>
           </div>
-          <div class="page-price__item">
-            <div class="page-price__heading">
+          <div class="page-price__item price-table">
+            <div class="price-table__heading">
               <img src="./assets/images/common/Price.svg" alt="ヒトデのアイコン">ファンダイビング
             </div>
-            <table class="page-price__table">
-              <tr class="page-price__list">
-                <td class="page-price__text">ビーチダイビング<br class="u-mobile">(2ダイブ)</td>
-                <td class="page-price__price-menu">¥14,000</td>
+            <table class="price-table__table">
+              <tr class="price-table__list">
+                <td class="price-table__text">ビーチダイビング<br class="u-mobile">(2ダイブ)</td>
+                <td class="price-table__price-menu">¥14,000</td>
               </tr>
-              <tr class="page-price__list">
-                <td class="page-price__text">ボートダイビング<br class="u-mobile">(2ダイブ)</td>
-                <td class="page-price__price-menu">¥18,000</td>
+              <tr class="price-table__list">
+                <td class="price-table__text">ボートダイビング<br class="u-mobile">(2ダイブ)</td>
+                <td class="price-table__price-menu">¥18,000</td>
               </tr>
-              <tr class="page-price__list">
-                <td class="page-price__text">スペシャルダイビング<br class="u-mobile">(2ダイブ)</td>
-                <td class="page-price__price-menu">¥24,000</td>
+              <tr class="price-table__list">
+                <td class="price-table__text">スペシャルダイビング<br class="u-mobile">(2ダイブ)</td>
+                <td class="price-table__price-menu">¥24,000</td>
               </tr>
-              <tr class="page-price__list">
-                <td class="page-price__text">ナイトダイビング<br class="u-mobile">(1ダイブ)</td>
-                <td class="page-price__price-menu">¥10,000</td>
+              <tr class="price-table__list">
+                <td class="price-table__text">ナイトダイビング<br class="u-mobile">(1ダイブ)</td>
+                <td class="price-table__price-menu">¥10,000</td>
               </tr>
             </table>
           </div>
-          <div class="page-price__item">
-            <div class="page-price__heading">
+          <div class="page-price__item price-table">
+            <div class="price-table__heading">
               <img src="./assets/images/common/Price.svg" alt="ヒトデのアイコン">スペシャルダイビング
             </div>
-            <table class="page-price__table">
-              <tr class="page-price__list">
-                <td class="page-price__text">貸切ダイビング<br class="u-mobile">(2ダイブ)</td>
-                <td class="page-price__price-menu">¥24,000</td>
+            <table class="price-table__table">
+              <tr class="price-table__list">
+                <td class="price-table__text">貸切ダイビング<br class="u-mobile">(2ダイブ)</td>
+                <td class="price-table__price-menu">¥24,000</td>
               </tr>
-              <tr class="page-price__list">
-                <td class="page-price__text">1日ダイビング<br class="u-mobile">(3ダイブ)</td>
-                <td class="page-price__price-menu">¥32,000</td>
+              <tr class="price-table__list">
+                <td class="price-table__text">1日ダイビング<br class="u-mobile">(3ダイブ)</td>
+                <td class="price-table__price-menu">¥32,000</td>
               </tr>
-              <tr class="page-price__list">
-                <td class="page-price__text">ナイトダイビング<br class="u-mobile">(2ダイブ)</td>
-                <td class="page-price__price-menu">¥14,000</td>
+              <tr class="price-table__list">
+                <td class="price-table__text">ナイトダイビング<br class="u-mobile">(2ダイブ)</td>
+                <td class="price-table__price-menu">¥14,000</td>
               </tr>
             </table>
           </div>
+        </div>
       </div>
     </div>
 
@@ -366,7 +368,7 @@
           <div class="footer__left">
             <div class="footer__pc">
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-c.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">キャンペーン</p>
                 </a>
@@ -377,7 +379,7 @@
                 </div>
               </div>
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-about.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">私たちについて</p>
                 </a>
@@ -385,18 +387,18 @@
             </div>
             <div class="footer__pc">
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-information.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">ダイビング情報</p>
                 </a>
                 <div class="footer-link__details">
-                  <a href="#" class="footer-link__detail">ライセンス講習</a>
-                  <a href="#" class="footer-link__detail">体験ダイビング</a>
-                  <a href="#" class="footer-link__detail">ファンダイビング</a>
+                  <a href="page-information.html?tab=ライセンス講習" class="footer-link__detail">ライセンス講習</a>
+                  <a href="page-information.html?tab=体験ダイビング" class="footer-link__detail">体験ダイビング</a>
+                  <a href="page-information.html?tab=ファンダイビング" class="footer-link__detail">ファンダイビング</a>
                 </div>
               </div>
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-blog.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">ブログ</p>
                 </a>
@@ -406,13 +408,13 @@
           <div class="footer__right">
             <div class="footer__pc">
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-voice.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">お客様の声</p>
                 </a>
               </div>
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-price.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">料金一覧</p>
                 </a>
@@ -425,25 +427,31 @@
             </div>
             <div class="footer__pc">
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-faq.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">よくある質問</p>
                 </a>
               </div>
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-site-map.html" class="footer-link__main">
+                  <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
+                  <p class="footer-link__text">サイトマップ</p>
+                </a>
+              </div>
+              <div class="footer__link footer-link">
+                <a href="page-privacy-policy.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">プライバシー<br>ポリシー</p>
                 </a>
               </div>
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-terms-of-service.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">利用規約</p>
                 </a>
               </div>
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-contact.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">お問い合わせ</p>
                 </a>
