--- a/src/page-information.html
+++ b/src/page-information.html
@@ -224,20 +224,17 @@
 
     <!-- information -->
     <div class="page-information layout-page-information">
-      <div class="page-information__inner inner">
+      <div class="page-information__inner inner fish-image">
         <div class="page-information__tab tab">
           <div class="tab__list">
-            <button class="tab__button js-tab-button is-active">
-              <img src="./assets/images/common/Information-p-icon1.svg" alt="クジラのアイコン" class="u-desktop">
-              ライセンス<br class="u-mobile">講習
+            <button class="tab__button tab__example-mask--white js-tab-button is-active" id="ライセンス講習">
+              <span class="u-desktop"></span>ライセンス<br class="u-mobile">講習
             </button>
-            <button class="tab__button js-tab-button">
-              <img src="./assets/images/common/Information-p-icon2.svg" alt="クジラのアイコン" class="u-desktop">
-              ファン<br class="u-mobile">ダイビング
+            <button class="tab__button tab__example-mask--green js-tab-button" id="ファンダイビング">
+              <span class="u-desktop"></span>ファン<br class="u-mobile">ダイビング
             </button>
-            <button class="tab__button js-tab-button">
-              <img src="./assets/images/common/Information-p-icon3.svg" alt="クジラのアイコン" class="u-desktop">
-              体験<br class="u-mobile">ダイビング
+            <button class="tab__button tab__example-mask--green2 js-tab-button" id="体験ダイビング">
+              <span class="u-desktop"></span>体験<br class="u-mobile">ダイビング
             </button>
           </div>
           <div class="tab__contents">
@@ -325,7 +322,7 @@
           <div class="footer__left">
             <div class="footer__pc">
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-c.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">キャンペーン</p>
                 </a>
@@ -336,7 +333,7 @@
                 </div>
               </div>
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-about.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">私たちについて</p>
                 </a>
@@ -344,18 +341,18 @@
             </div>
             <div class="footer__pc">
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-information.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">ダイビング情報</p>
                 </a>
                 <div class="footer-link__details">
-                  <a href="#" class="footer-link__detail">ライセンス講習</a>
-                  <a href="#" class="footer-link__detail">体験ダイビング</a>
-                  <a href="#" class="footer-link__detail">ファンダイビング</a>
+                  <a href="page-information.html?tab=ライセンス講習" class="footer-link__detail">ライセンス講習</a>
+                  <a href="page-information.html?tab=体験ダイビング" class="footer-link__detail">体験ダイビング</a>
+                  <a href="page-information.html?tab=ファンダイビング" class="footer-link__detail">ファンダイビング</a>
                 </div>
               </div>
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-blog.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">ブログ</p>
                 </a>
@@ -365,13 +362,13 @@
           <div class="footer__right">
             <div class="footer__pc">
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-voice.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">お客様の声</p>
                 </a>
               </div>
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-price.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">料金一覧</p>
                 </a>
@@ -384,25 +381,31 @@
             </div>
             <div class="footer__pc">
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-faq.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">よくある質問</p>
                 </a>
               </div>
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-site-map.html" class="footer-link__main">
+                  <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
+                  <p class="footer-link__text">サイトマップ</p>
+                </a>
+              </div>
+              <div class="footer__link footer-link">
+                <a href="page-privacy-policy.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">プライバシー<br>ポリシー</p>
                 </a>
               </div>
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-terms-of-service.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">利用規約</p>
                 </a>
               </div>
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-contact.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">お問い合わせ</p>
                 </a>
