--- a/src/page-terms-of-service.html
+++ b/src/page-terms-of-service.html
@@ -221,7 +221,7 @@
 
     <!-- プライバシーポリシー -->
     <div class="page-termsofservice layout-page-termsofservice">
-      <div class="page-termsofservice__inner inner">
+      <div class="page-termsofservice__inner inner fish-image">
         <h2 class="page-termsofservice__title">利用規約</h2>
         <div class="page-termsofservice__contact">
           <p class="page-termsofservice__text">
@@ -319,7 +319,7 @@
           <div class="footer__left">
             <div class="footer__pc">
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-c.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">キャンペーン</p>
                 </a>
@@ -330,7 +330,7 @@
                 </div>
               </div>
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-about.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">私たちについて</p>
                 </a>
@@ -338,18 +338,18 @@
             </div>
             <div class="footer__pc">
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-information.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">ダイビング情報</p>
                 </a>
                 <div class="footer-link__details">
-                  <a href="#" class="footer-link__detail">ライセンス講習</a>
-                  <a href="#" class="footer-link__detail">体験ダイビング</a>
-                  <a href="#" class="footer-link__detail">ファンダイビング</a>
+                  <a href="page-information.html?tab=ライセンス講習" class="footer-link__detail">ライセンス講習</a>
+                  <a href="page-information.html?tab=体験ダイビング" class="footer-link__detail">体験ダイビング</a>
+                  <a href="page-information.html?tab=ファンダイビング" class="footer-link__detail">ファンダイビング</a>
                 </div>
               </div>
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-blog.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">ブログ</p>
                 </a>
@@ -359,13 +359,13 @@
           <div class="footer__right">
             <div class="footer__pc">
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-voice.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">お客様の声</p>
                 </a>
               </div>
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-price.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">料金一覧</p>
                 </a>
@@ -378,25 +378,31 @@
             </div>
             <div class="footer__pc">
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-faq.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">よくある質問</p>
                 </a>
               </div>
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-site-map.html" class="footer-link__main">
+                  <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
+                  <p class="footer-link__text">サイトマップ</p>
+                </a>
+              </div>
+              <div class="footer__link footer-link">
+                <a href="page-privacy-policy.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">プライバシー<br>ポリシー</p>
                 </a>
               </div>
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-terms-of-service.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">利用規約</p>
                 </a>
               </div>
               <div class="footer__link footer-link">
-                <a href="#" class="footer-link__main">
+                <a href="page-contact.html" class="footer-link__main">
                   <div class="footer-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="footer-link__text">お問い合わせ</p>
                 </a>
