--- a/src/page-site-map.html
+++ b/src/page-site-map.html
@@ -55,7 +55,7 @@
           <div class="drawer-menu__list">
             <div class="drawer-menu__left">
               <div class="drawer-menu__link drawer-menu-link">
-                <a href="#" class="drawer-menu-link__main">
+                <a href="page-c.html" class="drawer-menu-link__main">
                   <div class="drawer-menu-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="drawer-menu-link__text">キャンペーン</p>
                 </a>
@@ -66,24 +66,24 @@
                 </div>
               </div>
               <div class="drawer-menu__link drawer-menu-link">
-                <a href="#" class="drawer-menu-link__main">
+                <a href="page-about.html" class="drawer-menu-link__main">
                   <div class="drawer-menu-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="drawer-menu-link__text">私たちについて</p>
                 </a>
               </div>
               <div class="drawer-menu__link drawer-menu-link">
-                <a href="#" class="drawer-menu-link__main">
+                <a href="page-information.html" class="drawer-menu-link__main">
                   <div class="drawer-menu-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="drawer-menu-link__text">ダイビング情報</p>
                 </a>
                 <div class="drawer-menu-link__details">
-                  <a href="#" class="drawer-menu-link__detail">ライセンス講習</a>
-                  <a href="#" class="drawer-menu-link__detail">体験ダイビング</a>
-                  <a href="#" class="drawer-menu-link__detail">ファンダイビング</a>
+                  <a href="page-information.html?tab=ライセンス講習" class="drawer-menu-link__detail footer-link__detail">ライセンス講習</a>
+                  <a href="page-information.html?tab=体験ダイビング" class="drawer-menu-link__detail footer-link__detail">体験ダイビング</a>
+                  <a href="page-information.html?tab=ファンダイビング" class="drawer-menu-link__detail footer-link__detail">ファンダイビング</a>
                 </div>
               </div>
               <div class="drawer-menu__link drawer-menu-link">
-                <a href="#" class="drawer-menu-link__main">
+                <a href="page-blog.html" class="drawer-menu-link__main">
                   <div class="drawer-menu-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="drawer-menu-link__text">ブログ</p>
                 </a>
@@ -91,13 +91,13 @@
             </div>
             <div class="drawer-menu__right">
               <div class="drawer-menu__link drawer-menu-link">
-                <a href="#" class="drawer-menu-link__main-right">
+                <a href="page-voice.html" class="drawer-menu-link__main-right">
                   <div class="drawer-menu-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="drawer-menu-link__text">お客様の声</p>
                 </a>
               </div>
               <div class="drawer-menu__link drawer-menu-link">
-                <a href="#" class="drawer-menu-link__main-right">
+                <a href="page-price.html" class="drawer-menu-link__main-right">
                   <div class="drawer-menu-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="drawer-menu-link__text">料金一覧</p>
                 </a>
@@ -108,25 +108,25 @@
                 </div>
               </div>
               <div class="drawer-menu__link drawer-menu-link">
-                <a href="#" class="drawer-menu-link__main-right">
+                <a href="page-faq.html" class="drawer-menu-link__main-right">
                   <div class="drawer-menu-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="drawer-menu-link__text">よくある質問</p>
                 </a>
               </div>
               <div class="drawer-menu__link drawer-menu-link">
-                <a href="#" class="drawer-menu-link__main-right">
+                <a href="page-privacy-policy.html" class="drawer-menu-link__main-right">
                   <div class="drawer-menu-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="drawer-menu-link__text">プライバシー<br>ポリシー</p>
                 </a>
               </div>
               <div class="drawer-menu__link drawer-menu-link">
-                <a href="#" class="drawer-menu-link__main-right">
+                <a href="page-terms-of-service.html" class="drawer-menu-link__main-right">
                   <div class="drawer-menu-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="drawer-menu-link__text">利用規約</p>
                 </a>
               </div>
               <div class="drawer-menu__link drawer-menu-link">
-                <a href="#" class="drawer-menu-link__main-right">
+                <a href="page-contact.html" class="drawer-menu-link__main-right">
                   <div class="drawer-menu-link__icon"><img src="./assets/images/common/hitode.svg" alt="ヒトデのアイコン"></div>
                   <p class="drawer-menu-link__text">お問い合わせ</p>
                 </a>
